--- a/munshroom.ipynb
+++ b/munshroom.ipynb
@@ -6,7 +6,7 @@
       "name": "munshroom.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO73/XnlANRpZXhInYbBMji",
+      "authorship_tag": "ABX9TyPXtNSABjLA2mwkNHvMQZ+N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,34 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/soren-hub/Mushroom_Classification/blob/joaco/munshroom.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zBFgxFg_2RoE",
+        "outputId": "4e25828c-1069-4b6a-adf4-7c249848675c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!git clone https://github.com/soren-hub/Mushroom_Classification.git"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'Mushroom_Classification'...\n",
+            "remote: Enumerating objects: 19, done.\u001b[K\n",
+            "remote: Counting objects: 100% (19/19), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (16/16), done.\u001b[K\n",
+            "remote: Total 19 (delta 8), reused 5 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (19/19), done.\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -63,7 +91,7 @@
         "import pandas as pd\n",
         "df = pd.read_csv(\"/content/Mushroom_Classification/data/mushrooms.csv\")"
       ],
-      "execution_count": 93,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -71,15 +99,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 270
+          "height": 260
         },
         "id": "E1wyLsYn_pjw",
-        "outputId": "f57b4a29-4606-4fad-db5f-4f68009fe97e"
+        "outputId": "0d0b62d0-8ffb-4015-f80e-f397ca1670cd"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 94,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -277,7 +305,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 94
+          "execution_count": 6
         }
       ]
     },
@@ -331,12 +359,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4qSRrIf7F_rV",
-        "outputId": "34d528eb-2cd6-46ce-f51d-905cb2eaafd1"
+        "outputId": "2ae759b4-696b-429a-9464-5723331d9b0e"
       },
       "source": [
         "df.info()"
       ],
-      "execution_count": 95,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,6 +405,57 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ye2dkSC52LFO",
+        "outputId": "6631d3d2-2e90-4bfa-d1a7-d1aeca270d0b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "df.isnull().sum()"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "class                       0\n",
+              "cap-shape                   0\n",
+              "cap-surface                 0\n",
+              "cap-color                   0\n",
+              "bruises                     0\n",
+              "odor                        0\n",
+              "gill-attachment             0\n",
+              "gill-spacing                0\n",
+              "gill-size                   0\n",
+              "gill-color                  0\n",
+              "stalk-shape                 0\n",
+              "stalk-root                  0\n",
+              "stalk-surface-above-ring    0\n",
+              "stalk-surface-below-ring    0\n",
+              "stalk-color-above-ring      0\n",
+              "stalk-color-below-ring      0\n",
+              "veil-type                   0\n",
+              "veil-color                  0\n",
+              "ring-number                 0\n",
+              "ring-type                   0\n",
+              "spore-print-color           0\n",
+              "population                  0\n",
+              "habitat                     0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "UJcHF7NHYFUp"
@@ -391,11 +470,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "_8pGyfnIYDmC",
-        "outputId": "87001e72-0038-4c9f-ac86-4cd128e64d30",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "87001e72-0038-4c9f-ac86-4cd128e64d30"
       },
       "source": [
         "import pandas as pd\n",
@@ -412,7 +491,7 @@
         "\n",
         "stalk-root, veil-type, veil-color \n"
       ],
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
